--- a/.gitignore
+++ b/.gitignore
@@ -221,7 +221,7 @@ ClientBin/
 *.publishsettings
 orleans.codegen.cs
 
-# Including strong name files can present a security risk 
+# Including strong name files can present a security risk
 # (https://github.com/github/gitignore/pull/2483#issue-259490424)
 #*.snk
 
@@ -317,7 +317,7 @@ __pycache__/
 # OpenCover UI analysis results
 OpenCover/
 
-# Azure Stream Analytics local run output 
+# Azure Stream Analytics local run output
 ASALocalRun/
 
 # MSBuild Binary and Structured Log
@@ -326,6 +326,13 @@ ASALocalRun/
 # NVidia Nsight GPU debugger configuration file
 *.nvuser
 
-# MFractors (Xamarin productivity tool) working folder 
+# MFractors (Xamarin productivity tool) working folder
 .mfractor/
 
+MASS-unsupNMT/tools/fastBPE
+MASS-unsupNMT/tools/mosesdecoder
+MASS-unsupNMT/tools/stanford-segmenter*
+MASS-unsupNMT/tools/wikiextractor
+MASS-unsupNMT/tools/wmt16-scripts
+MASS-unsupNMT/dumped
+MASS-unsupNMT/data/data.zip
