fixed bug in saving model

--- a/.gitignore
+++ b/.gitignore
@@ -336,3 +336,4 @@ MASS-unsupNMT/tools/wikiextractor
 MASS-unsupNMT/tools/wmt16-scripts
 MASS-unsupNMT/dumped
 MASS-unsupNMT/data/data.zip
+MASS-unsupNMT/models
